--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -23,7 +23,7 @@
     % captions=tablesignature,
 ]{scrbook}
 
-\setcounter{secnumdepth}{3}
+\setcounter{secnumdepth}{4}
 \setcounter{tocdepth}{4}
 
 \usepackage{dirtree}
@@ -400,15 +400,9 @@ Wien, \today
 
 \section{Websocket}\label{Websocket}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
 
     \input{markdown/Dominik.md/Websocket.md}
-
-\section{LDAP}\label{LDAP}
-
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
-
-% \input{markdown/Clemens.md/myChapter.md}
 
 \section{DMX}\label{DMX}
 
@@ -422,17 +416,17 @@ Wien, \today
 
 \input{markdown/Clemens.md/Ir.md}
 
-\section{Mischpult}\label{Mischpult}
+\section{JSON Web Token}\label{JWT}
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Clemens.md/jwt.md}
 
 \section{SQLite}\label{SQLite}
 
 \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Clemens.md/sqlite.md}
 
 \section{Schnittstelle}\label{Schnittstelle}
 
@@ -442,6 +436,8 @@ Wien, \today
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Frontend %%%%%%%%%%%%%%%%%%%%%
 \chapter{Frontend}\label{Frontend}
+
+    \input{markdown/Dominik.md/Frontend.md}{Autor: Dominik Nußbaumer}
 
 \section{CSS}\label{CSS}
 
@@ -467,7 +463,7 @@ Wien, \today
 
     \input{markdown/Dominik.md/CSS_Variablen.md}{Autor: Dominik Nußbaumer}
 
-\section{Anpassungsfähiges Design}\label{Anpassungsfähiges Design}
+\section{Responsives Design}\label{Responsives Design}
 
     \input{markdown/Dominik.md/responsive_design.md}{Autor: Dominik Nußbaumer}
 
