--- a/diplom.bib
+++ b/diplom.bib
@@ -415,6 +415,22 @@
 	urldate = {2018-03-30},
 	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\NBJEXY66\\wiringpi.com.html:text/html}
 }
+
+@misc{noauthor_php-cpp_nodate,
+	title = {{PHP}-{CPP} - {A} {C}++ library for developing {PHP} extensions},
+	url = {http://www.php-cpp.com},
+	abstract = {PHP-CPP is a C++ library for developing PHP extensions. Use and extend PHP-CPP's well documented and easy to use classes to build native extensions for PHP.},
+	language = {en},
+	urldate = {2018-04-01},
+	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\PVPT89J9\\www.php-cpp.com.html:text/html}
+}
+
+@misc{noauthor_ratchet_nodate,
+	title = {Ratchet - {PHP} {WebSockets}},
+	url = {http://socketo.me/},
+	urldate = {2018-04-01},
+	file = {Ratchet - PHP WebSockets:C\:\\Users\\cleme\\Zotero\\storage\\MNUEA27X\\socketo.me.html:text/html}
+}
 @online{einfuehrung_websockets,
 	title = {Einführung zu {WebSockets}: Sockets im Web - {HTML}5 Rocks},
 	url = {https://www.html5rocks.com/de/tutorials/websockets/basics/},
@@ -549,6 +565,15 @@
 	urldate = {2018-03-10}
 }
 
+@online{browser_support_flex,
+	title = {Can I use... Support tables for {HTML}5, {CSS}3, etc},
+	url = {https://caniuse.com/#search=flexbox},
+	shorttitle = {browser\_support\_flexbox},
+	author = {{CanIuse}},
+	urldate = {2018-03-10}
+}
+
+
 @online{css-tricks_does_2017,
 	title = {Does {CSS} Grid Replace Flexbox?},
 	url = {https://css-tricks.com/css-grid-replace-flexbox/},
@@ -641,9 +666,51 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	langid = {english}
 }
 
-@online{websockets_official,
+@online{websocket_official,
 	title = {Websockets Official},
 	url = {https://www.w3.org/TR/websockets/},
 	shorttitle = {websockets\_official},
 	author = {{W3C}}
+}
+
+@online{browser_support_variables,
+	title = {Browser Support von CSS-Variablen},
+	url = {https://caniuse.com/#search=custom%20properties},
+	shorttitle = {browser\_support\_variables},
+	author = {{CanIuse}},
+	urldate = {2018-03-20}
+}
+
+@online{websocket_events,
+	title = {Websocket Events und Actions},
+	url = {https://www.tutorialspoint.com/websockets/websockets_events_actions.htm},
+	shorttitle = {websocket\_events},
+	author = {{tutorialspoint}},
+	urldate = {2018-03-20}
+}
+
+@online{websocket_spec,
+	title = {Websocket Official Spec},
+	url = {https://html.spec.whatwg.org/multipage/web-sockets.html#network},
+	shorttitle = {websocket\_spec},
+	author = {{whatwg}},
+	urldate = {2018-03-20}
+}
+
+@online{css_official,
+	title = {{CSS} Snapshot 2017},
+	url = {https://www.w3.org/TR/CSS/},
+	urldate = {2018-04-02}
+}
+
+@online{html_official,
+	title = {{HTML} 5.2},
+	url = {https://www.w3.org/TR/html52/},
+	urldate = {2018-04-02}
+}
+
+@online{javascript_official,
+	title = {{JavaScript} {\textbar} {MDN}},
+	url = {https://developer.mozilla.org/en-US/docs/Web/javascript},
+	urldate = {2018-04-02}
 }
