--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -437,6 +437,8 @@ Wien, \today
 %%%%%%%%%%%%%%%%%%%%%% Chapter Frontend %%%%%%%%%%%%%%%%%%%%%
 \chapter{Frontend}\label{Frontend}
 
+    \input{markdown/Dominik.md/Frontend.md}{Autor: Dominik Nußbaumer}
+
 \section{CSS}\label{CSS}
 
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
@@ -461,7 +463,7 @@ Wien, \today
 
     \input{markdown/Dominik.md/CSS_Variablen.md}{Autor: Dominik Nußbaumer}
 
-\section{Anpassungsfähiges Design}\label{Anpassungsfähiges Design}
+\section{Responsives Design}\label{Responsives Design}
 
     \input{markdown/Dominik.md/responsive_design.md}{Autor: Dominik Nußbaumer}
 
