--- a/diplom.bib
+++ b/diplom.bib
@@ -633,7 +633,7 @@
 	langid = {english}
 }
 
-@inreference{Präprozessor,
+@online{Präprozessor,
 	title = {Präprozessor},
 	rights = {Creative Commons Attribution-{ShareAlike} License},
 	url = {https://de.wikipedia.org/w/index.php?title=Pr%C3%A4prozessor&oldid=172727677},
