--- a/bib/Dominik.bib
+++ b/bib/Dominik.bib
@@ -201,7 +201,7 @@
 	langid = {english}
 }
 
-@online{Präprozessor,
+@online{preprocessor_wiki,
 	title = {Präprozessor},
 	rights = {Creative Commons Attribution-{ShareAlike} License},
 	url = {https://de.wikipedia.org/w/index.php?title=Pr%C3%A4prozessor&oldid=172727677},
@@ -281,4 +281,34 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	title = {{JavaScript} {\textbar} {MDN}},
 	url = {https://developer.mozilla.org/en-US/docs/Web/javascript},
 	urldate = {2018-04-02}
+}
+
+@online{media_queries_official,
+	title = {Media Queries Level 4},
+	url = {https://www.w3.org/TR/mediaqueries-4/},
+	urldate = {2018-04-02}
+}
+
+@online{socket_io,
+	title = {Socket.{IO} — Docs},
+	url = {https://socket.io/docs/},
+	shorttitle = {socket.io},
+	author = {{Guillermo Rauch}},
+	urldate = {2018-04-03}
+}
+
+@online{soundcraft_official,
+	title = {Ui16 {\textbar} Soundcraft - Professional Audio Mixers},
+	url = {https://www.soundcraft.com/products/ui16#specifications},
+	shorttitle = {soundcraft},
+	author = {{Soundcraft}},
+	urldate = {2018-04-03}
+}
+
+@online{curl_official,
+	title = {{PHP}: Introduction - Manual},
+	url = {https://secure.php.net/manual/en/intro.curl.php},
+	shorttitle = {curl\_official},
+	author = {{php manual}},
+	urldate = {2018-04-03}
 }
