--- a/diplom.bib
+++ b/diplom.bib
@@ -714,3 +714,25 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	url = {https://developer.mozilla.org/en-US/docs/Web/javascript},
 	urldate = {2018-04-02}
 }
+
+@online{media_queries_official,
+	title = {Media Queries Level 4},
+	url = {https://www.w3.org/TR/mediaqueries-4/},
+	urldate = {2018-04-02}
+}
+
+@online{socket_io,
+	title = {Socket.{IO} — Docs},
+	url = {https://socket.io/docs/},
+	shorttitle = {socket.io},
+	author = {{Guillermo Rauch}},
+	urldate = {2018-04-03}
+}
+
+@online{soundcraft_official,
+	title = {Ui16 {\textbar} Soundcraft - Professional Audio Mixers},
+	url = {https://www.soundcraft.com/products/ui16#specifications},
+	shorttitle = {soundcraft},
+	author = {{Soundcraft}},
+	urldate = {2018-04-03}
+}
