--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -296,61 +296,61 @@ Wien, \today
 
 \section{Gehäuse}\label{Gehäuse}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Raspberry Pi}\label{Raspberry-Pi}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Ein- und Ausschlatverzögerung}\label{Ein-und-Ausschlatversögerung}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Lautsprecherschutzschaltung}\label{Lautsprecherschutzschaltung}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Infrarotsender}\label{Infrarotsender}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{DMX Interface}\label{DMX-Interface}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Verkabelung}\label{Verkabelung}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Gehäusebelüftung}\label{Gehäusebelüftung}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Stromversorgung}\label{Stromversorgung}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
 \section{Anschlüsse für den Anwender}\label{Anschlüsse-für-den-Anwender}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
