--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -294,65 +294,10 @@ Wien, \today
 %%%%%%%%%%%%%%%%%%%%%% Chapter Hardware %%%%%%%%%%%%%%%%%%%%%
 \chapter{Hardware}\label{Hardware}
 
-\section{Gehäuse}\label{Gehäuse}
-
 \renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-% \input{markdown/Clemens.md/myChapter.md}
+\input{markdown/Florian.md/Buch.md}
 
-\section{Raspberry Pi}\label{Raspberry-Pi}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{Ein- und Ausschlatverzögerung}\label{Ein-und-Ausschlatversögerung}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{Lautsprecherschutzschaltung}\label{Lautsprecherschutzschaltung}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{Infrarotsender}\label{Infrarotsender}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{DMX Interface}\label{DMX-Interface}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{Verkabelung}\label{Verkabelung}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{Gehäusebelüftung}\label{Gehäusebelüftung}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{Stromversorgung}\label{Stromversorgung}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
-
-\section{Anschlüsse für den Anwender}\label{Anschlüsse-für-den-Anwender}
-
-\renewcommand{\kapitelautor}{Autor: Florian Steiner}
-
-% \input{markdown/Clemens.md/myChapter.md}
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Betriebssystem %%%%%%%%%%%%%%%%%%%%%
 \chapter{Betriebssystem}\label{Betriebssystem}
