comment Schnittstellen kapitel

--- a/diplom.bib
+++ b/diplom.bib
@@ -431,6 +431,52 @@
 	urldate = {2018-04-01},
 	file = {Ratchet - PHP WebSockets:C\:\\Users\\cleme\\Zotero\\storage\\MNUEA27X\\socketo.me.html:text/html}
 }
+
+@misc{noauthor_elektronik:_nodate-1,
+	title = {Elektronik: {IR}-{Fernbedienung}, {RC}-5},
+	url = {http://www.sprut.de/electronic/ir/rc5.htm},
+	urldate = {2018-04-03},
+	file = {Elektronik\: IR-Fernbedienung, RC-5:C\:\\Users\\cleme\\Zotero\\storage\\8U334VAZ\\rc5.html:text/html}
+}
+
+@misc{noauthor_elektronik:_nodate-2,
+	title = {Elektronik: {IR}-{Fernbedienung}, {RC}-5},
+	url = {http://www.sprut.de/electronic/ir/rc5.htm},
+	urldate = {2018-04-03},
+	file = {Elektronik\: IR-Fernbedienung, RC-5:C\:\\Users\\cleme\\Zotero\\storage\\3EYGETZW\\rc5.html:text/html}
+}
+
+@misc{hoogvliet_json_2016,
+	title = {{JSON} {Web} {Token} ({JWT}) im {Detail}},
+	url = {https://blog.codecentric.de/2016/11/json-web-token-jwt-im-detail/},
+	abstract = {JWT ist die Abkürzung für “JSON Web Token”, das für den Einsatz im Web konzipiert wurde. Typisches Einsatzgebiet für JWT ist die fortlaufende Authentifizierung bei SSO (“single sign-on”), JWT ist aber flexibel einsetzbar für alle Bereiche, in denen kompakte, signierte und u. U. verschlüsselte Informationen übertragen werden müssen. Dieser Artikel gibt einen Überblick über den... Weiterlesen},
+	language = {de-DE},
+	urldate = {2018-04-03},
+	journal = {codecentric AG Blog},
+	author = {Hoogvliet, Oliver},
+	month = nov,
+	year = {2016},
+	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\X36YNKD4\\json-web-token-jwt-im-detail.html:text/html}
+}
+
+@misc{noauthor_elektronik:_nodate-3,
+	title = {Elektronik: {IR}-{Fernbedienung}, {RC}-5},
+	url = {http://www.sprut.de/electronic/ir/rc5.htm},
+	urldate = {2018-04-03},
+	file = {Elektronik\: IR-Fernbedienung, RC-5:C\:\\Users\\cleme\\Zotero\\storage\\875GHNTD\\rc5.html:text/html}
+}
+
+@misc{noauthor_php-jwt:_2018,
+	title = {php-jwt: {PEAR} package for {JWT}},
+	shorttitle = {php-jwt},
+	url = {https://github.com/firebase/php-jwt},
+	urldate = {2018-04-03},
+	publisher = {Firebase},
+	month = apr,
+	year = {2018},
+	note = {original-date: 2012-12-31T22:30:39Z},
+	file = {Snapshot:C\:\\Users\\cleme\\Zotero\\storage\\SV367HYM\\php-jwt.html:text/html}
+}
 @online{einfuehrung_websockets,
 	title = {Einführung zu {WebSockets}: Sockets im Web - {HTML}5 Rocks},
 	url = {https://www.html5rocks.com/de/tutorials/websockets/basics/},
