--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -373,9 +373,9 @@ Wien, \today
 
     \input{markdown/Clemens.md/sqlite.md}
 
-\section{Schnittstelle}\label{Schnittstelle}
+% \section{Schnittstelle}\label{Schnittstelle}
 
-    \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+%    \renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
