--- a/diplom.bib
+++ b/diplom.bib
@@ -129,7 +129,7 @@
 	file = {Grundlagen\: DMX-512 Protokoll:C\:\\Users\\cleme\\Zotero\\storage\\BS8QRAJX\\dmx512.html:text/html}
 }
 
-@book{noauthor_notitle_nodate
+@book{noauthor_notitle_nodate,
 }
 
 @book{noauthor_php_2017,
@@ -217,7 +217,7 @@
 	keywords = {Encyclopedias and dictionaries, German}
 }
 
-@misc{noauthor_notitle_nodate-1
+@misc{noauthor_notitle_nodate-1,
 }
 
 @article{smith_metal_1975,
