--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -347,7 +347,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
 
-    \input{markdown/Dominik.md/Websocket.md}
+    \input{markdown/Dominik.md/Websocket.md}{Autor: Dominik Nußbaumer}
 
 \section{DMX}\label{DMX}
 
