Kapitel getrennt, Tabellen angepasst

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -283,7 +283,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-% \input{markdown/Clemens.md/myChapter.md}
+% \input{markdown/Florian.md/Abgrenzung.md}
 
 \section{Aufbau}\label{Aufbau}
 
@@ -296,7 +296,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-\input{markdown/Florian.md/Buch.md}
+\input{markdown/Florian.md/Hardware.md}
 
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Betriebssystem %%%%%%%%%%%%%%%%%%%%%
@@ -439,9 +439,9 @@ Wien, \today
 
 \section{Beleuchtungskonzept Konferenzsaal}\label{Beleuchtungskonzept-Konferenzsaal}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-% \input{markdown/Clemens.md/myChapter.md}
+% \input{markdown/Florian.md/Beleuchtungskonzept.md}
 
 % \chapter{Ziele}
 
