addQuellen Kommando und Bildquellen

--- a/text/00_latex_shortcuts.tex
+++ b/text/00_latex_shortcuts.tex
@@ -39,4 +39,8 @@
 \newcommand{\uva}{u.\thinspace{}v.\thinspace{}a.\@\xspace}
 \newcommand{\uvm}{u.\thinspace{}v.\thinspace{}m.\@\xspace}
 
+\newcommand*{\quelle}{%
+\footnotesize Quelle:
+}
+
 
