--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -277,19 +277,19 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner, Clemens Scharwitzl, Dominik Nußbaumer}
 
-% \input{markdown/Ziele.md}
+\input{markdown/Ziele.md}
 
 \section{Abgrenzung und Voraussetzungen}\label{Abgrenzung-und-Voraussetzungen}
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-% \input{markdown/Florian.md/Abgrenzung.md}
+\input{markdown/Florian.md/Abgrenzung.md}
 
 \section{Aufbau}\label{Aufbau}
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner, Dominik Nußbaumer}
 
-% \input{markdown/Aufbau.md}
+\input{markdown/Aufbau.md}
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Hardware %%%%%%%%%%%%%%%%%%%%%
 \chapter{Hardware}\label{Hardware}
@@ -441,7 +441,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-% \input{markdown/Florian.md/Beleuchtungskonzept.md}
+\input{markdown/Florian.md/Beleuchtungskonzept.md}
 
 % \chapter{Ziele}
 
