--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -283,7 +283,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-% \input{markdown/Clemens.md/myChapter.md}
+% \input{markdown/Florian.md/Abgrenzung.md}
 
 \section{Aufbau}\label{Aufbau}
 
@@ -296,7 +296,7 @@ Wien, \today
 
 \renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-\input{markdown/Florian.md/Buch.md}
+\input{markdown/Florian.md/Hardware.md}
 
 
 %%%%%%%%%%%%%%%%%%%%%% Chapter Betriebssystem %%%%%%%%%%%%%%%%%%%%%
@@ -345,7 +345,7 @@ Wien, \today
 
 \section{Websocket}\label{Websocket}
 
-\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
+\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer, Clemens Scharwitzl}
 
     \input{markdown/Dominik.md/Websocket.md}{Autor: Dominik Nußbaumer}
 
@@ -439,9 +439,9 @@ Wien, \today
 
 \section{Beleuchtungskonzept Konferenzsaal}\label{Beleuchtungskonzept-Konferenzsaal}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Florian Steiner}
 
-% \input{markdown/Clemens.md/myChapter.md}
+% \input{markdown/Florian.md/Beleuchtungskonzept.md}
 
 % \chapter{Ziele}
 
