--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -345,7 +345,7 @@ Wien, \today
 
 \section{Websocket}\label{Websocket}
 
-\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
+\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer, Clemens Scharwitzl}
 
     \input{markdown/Dominik.md/Websocket.md}{Autor: Dominik Nußbaumer}
 
