Final von meiner Seite

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -431,9 +431,9 @@ Wien, \today
 %%%%%%%%%%%%%%%%%%%%%% Chapter Zusätzliches %%%%%%%%%%%%%%%%%%%%%
 \chapter{Zusätzliches}\label{Zusätzliches}
 
-\section{Bedienungsanleitung}\label{Bedienungsanleitung}
+%\section{Bedienungsanleitung}\label{Bedienungsanleitung}
 
-\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
+%\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
 % \input{markdown/Clemens.md/myChapter.md}
 
@@ -472,16 +472,16 @@ Wien, \today
 
 \appendix
 
-\chapter{Anhang 1\label{chap:Anhang-1}}
+%\chapter{Anhang 1\label{chap:Anhang-1}}
 
-was auch immer: technische Dokumentationen etc.
+%was auch immer: technische Dokumentationen etc.
 
-Zusätzlich sollte es geben:
-\begin{itemize}
-\item Abkürzungsverzeichnis
-\item Quellenverzeichnis (hier: Bibtex im Stil plaindin)
-\end{itemize}
-\printindex{}
+%Zusätzlich sollte es geben:
+%\begin{itemize}
+%\item Abkürzungsverzeichnis
+%\item Quellenverzeichnis (hier: Bibtex im Stil plaindin)
+%\end{itemize}
+%\printindex{}
 
 %% Flattersatz -- damit werden die langen URLs besser umgebrochen
 \raggedright %% eventuell auskommentieren
