--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -345,9 +345,9 @@ Wien, \today
 
 \section{Websocket}\label{Websocket}
 
-\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer, Clemens Scharwitzl}
+\renewcommand{\kapitelautor}{Autor: Clemens Scharwitzl}
 
-    \input{markdown/Dominik.md/Websocket.md}{Autor: Dominik Nußbaumer}
+    \input{markdown/Dominik.md/Websocket.md}
 
 \section{DMX}\label{DMX}
 
