final final version

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -208,7 +208,7 @@ A-1030 Wien :: Tel +43 1 24215-10 :: Fax DW 18
 \textbf{\LARGE{Diplomarbeit}}{\large{}}\\
 {\large{}\vspace{15mm}
  }\textbf{\large{Mediatrix}}\\
-\textbf{\large{Ausgeschriebener Titel der Diplomarbeit}}\\
+\textbf{\large{Steuerung für Präsentationsräume}}\\
  \vspace{15mm}
  ausgeführt an der\\
  Höheren Abteilung für Informationstechnologie/Medientechnik\\
