--- a/bib/Dominik.bib
+++ b/bib/Dominik.bib
@@ -282,6 +282,6 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	title = {{PHP}: Introduction - Manual},
 	url = {https://secure.php.net/manual/en/intro.curl.php},
 	shorttitle = {curl\_official},
-	author = {{php manual}},
+	author = {{pcurl manual}},
 	urldate = {2018-04-03}
 }
