fixes and started adding content

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -416,6 +416,12 @@ Wien, \today
 
     \input{markdown/Dominik.md/CSS_Variablen.md}
 
+\section{Herausforderungen}\label{Herausforderungen}
+
+\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
+
+    \input{markdown/Dominik.md/Herausforderungen.md}
+
 \section{jQuery}\label{jQuery}
 
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
