--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -59,6 +59,8 @@
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 
+\usepackage[binary-units]{siunitx}
+\DeclareSIUnit\mybyte{Byte}
 
 %%? \usepackage{textcomp}
 \usepackage[hyphens]{url}
