--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -1,5 +1,5 @@
-\section{CSS-Variablen}\label{CSS-Variablen}
+\section{Herausforderungen}\label{Herausforderungen}
 
 \renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
 
-    \input{markdown/Dominik.md/CSS_Variablen.md}
+    \input{markdown/Dominik.md/Herausforderungen.md}
