auf einseitigen druck umgestellt

--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -1,7 +1,7 @@
 \documentclass[
     headings=optiontotocandhead,% Erweiterung für das optionale Argument der
                                 % Gliederungsbefehle aktiviert.
-    twoside,
+    oneside,
     numbers=noenddot,% Keine Punkte am Ende der Gliederungsnummern und davon
                      % abgeleiteten Nummern
     toc=flat, %Flache TOC
