--- a/bib/Meine Bibliothek.bib
+++ b/bib/Meine Bibliothek.bib
@@ -1,5 +1,5 @@
 
-@online{einfuehrung_websockets,
+@online{ubl_einfuhrung_????,
 	title = {Einführung zu {WebSockets}: Sockets im Web - {HTML}5 Rocks},
 	url = {https://www.html5rocks.com/de/tutorials/websockets/basics/},
 	shorttitle = {einfuehrung\_websockets},
@@ -9,7 +9,7 @@
 	urldate = {2017-12-08}
 }
 
-@online{grid_by_example,
+@online{_grid_????,
 	title = {Grid by Example - Usage examples of {CSS} Grid Layout},
 	url = {https://gridbyexample.com/examples/},
 	urldate = {2017-12-08}
@@ -25,7 +25,7 @@
 	date = {2017-07-07}
 }
 
-@online{using_flexbox,
+@online{_using_????,
 	title = {Using {CSS} flexible boxes},
 	url = {https://developer.mozilla.org/de/docs/Web/CSS/CSS_Flexible_Box_Layout/Using_CSS_flexible_boxes},
 	shorttitle = {using\_flexbox},
@@ -35,7 +35,7 @@
 	langid = {german}
 }
 
-@online{basic_concepts_flexbox,
+@online{mdn_basic_????,
 	title = {Basic concepts of flexbox},
 	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox},
 	shorttitle = {basic\_concepts\_flexbox},
@@ -46,7 +46,15 @@
 	langid = {american}
 }
 
-@online{visual_guide_flexbox,
+@online{_layout_????,
+	title = {Layout with Flexbox · React Native},
+	url = {https://facebook.github.io/react-native/index.html},
+	shorttitle = {layout\_with\_flexbox},
+	abstract = {A component can specify the layout of its children using the flexbox algorithm. Flexbox is designed to provide a consistent layout on different screen sizes.},
+	urldate = {2018-02-11}
+}
+
+@online{stojanov_visual_????,
 	title = {A Visual Guide to {CSS}3 Flexbox Properties},
 	url = {http://scotch.io/tutorials/a-visual-guide-to-css3-flexbox-properties},
 	abstract = {The Flexbox Layout officially called {CSS} Flexible Box Layout Module is new layout module in {CSS}3 made to improve the items align, directions and order in the container even when they are with dynamic or even unknown size. The prime},
@@ -56,7 +64,7 @@
 	langid = {english}
 }
 
-@online{flexbox_official,
+@online{w3c_css_????,
 	title = {{CSS} Flexible Box Layout Module Level 1},
 	url = {https://www.w3.org/TR/css-flexbox-1/},
 	shorttitle = {flexbox\_official},
@@ -64,7 +72,7 @@
 	urldate = {2018-02-11}
 }
 
-@online{complete_guide_flexbox,
+@online{css-tricks_complete_????,
 	title = {A Complete Guide to Flexbox},
 	url = {https://css-tricks.com/snippets/css/a-guide-to-flexbox/},
 	shorttitle = {complete\_guide\_flexbox},
@@ -75,7 +83,7 @@
 	langid = {english}
 }
 
-@online{CSS_Grid_Mozilla,
+@online{mdn_css_????,
 	title = {{CSS} Grid Layout},
 	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout},
 	shorttitle = {{CSS}\_Grid\_Mozilla},
@@ -86,14 +94,23 @@
 	langid = {american}
 }
 
-@online{css_variables,
+@online{w3c_css_????-1,
 	title = {{CSS} Custom Properties for Cascading Variables Module Level 1},
 	url = {https://www.w3.org/TR/css-variables-1/},
+	shorttitle = {css\_variables},
 	author = {{W3C}},
 	urldate = {2018-03-07}
 }
 
-@online{CSS_Grid_Official,
+@online{girdbyexample_browser_????,
+	title = {Browser Support for {CSS} Grid Layout},
+	url = {https://gridbyexample.com/browsers/},
+	shorttitle = {grid\_by\_example},
+	author = {{girdbyexample}},
+	urldate = {2018-03-10}
+}
+
+@online{w3c_css_????-2,
 	title = {{CSS} Grid Layout Module Level 1},
 	url = {https://www.w3.org/TR/css-grid/},
 	shorttitle = {{CSS}\_Grid\_Official},
@@ -101,7 +118,7 @@
 	urldate = {2018-03-10}
 }
 
-@online{complete_guide_grid,
+@online{css-tricks_complete_????-1,
 	title = {A Complete Guide to Grid {\textbar} {CSS}-Tricks},
 	url = {https://css-tricks.com/snippets/css/complete-guide-grid/},
 	shorttitle = {complete\_guide\_grid},
@@ -109,22 +126,13 @@
 	urldate = {2018-03-10}
 }
 
-@online{browser_support_grid,
+@online{caniuse_can_????,
 	title = {Can I use... Support tables for {HTML}5, {CSS}3, etc},
 	url = {https://caniuse.com/#search=grid},
 	shorttitle = {browser\_support\_grid},
 	author = {{CanIuse}},
 	urldate = {2018-03-10}
 }
-
-@online{browser_support_flex,
-	title = {Can I use... Support tables for {HTML}5, {CSS}3, etc},
-	url = {https://caniuse.com/#search=flexbox},
-	shorttitle = {browser\_support\_flexbox},
-	author = {{CanIuse}},
-	urldate = {2018-03-10}
-}
-
 
 @online{css-tricks_does_2017,
 	title = {Does {CSS} Grid Replace Flexbox?},
@@ -137,14 +145,35 @@
 	langid = {english}
 }
 
-@online{flexbox_vs_grid,
+@online{_how_2017,
+	title = {How the minmax() Function Works},
+	url = {https://bitsofco.de},
+	abstract = {One incredibly useful new feature introduced with the {CSS} Grid Layout Specification is the minmax() function. This function opens the door to us being able to write much more powerful and succinct {CSS} by allowing us to set, as a value for a grid track, a function including both a},
+	titleaddon = {bitsofcode},
+	urldate = {2018-03-10},
+	date = {2017-06-06},
+	langid = {english}
+}
+
+@online{_flexbox_????,
 	title = {Flexbox vs {CSS} Grid: A Practical Example • Silo Creativo},
 	url = {https://www.silocreativo.com/en/flexbox-vs-css-grid-practical-example/},
 	shorttitle = {flexbox\_vs\_grid},
 	urldate = {2018-03-18}
 }
 
-@book{responsive_design,
+@online{borgen_ultimate_2017,
+	title = {The ultimate {CSS} battle: Grid vs Flexbox},
+	url = {https://hackernoon.com/the-ultimate-css-battle-grid-vs-flexbox-d40da0449faf},
+	shorttitle = {borgen\_ultimate\_2017},
+	abstract = {Learn how they differ, and when you should use one over the other.},
+	titleaddon = {Hacker Noon},
+	author = {Borgen, Per Harald},
+	urldate = {2018-03-18},
+	date = {2017-12-10}
+}
+
+@book{sharkie_jump_2017,
 	title = {Jump start responsive web design},
 	url = {http://proquest.safaribooksonline.com/?fpi=9781492020615},
 	shorttitle = {responsive\_design},
@@ -154,7 +183,7 @@
 	note = {{OCLC}: 987006602}
 }
 
-@online{jquery.org,
+@online{jquery.org_jquery_????,
 	title = {{jQuery}},
 	url = {https://jquery.com/},
 	shorttitle = {jquery\_official},
@@ -164,7 +193,7 @@
 	langid = {american}
 }
 
-@online{about_normalize,
+@online{nicolas_about_????,
 	title = {About normalize.css – Nicolas Gallagher},
 	url = {http://nicolasgallagher.com/about-normalize-css/},
 	shorttitle = {about\_normalize},
@@ -174,7 +203,7 @@
 	langid = {english}
 }
 
-@online{preprocessor_wiki,
+@inreference{_praprozessor_2018,
 	title = {Präprozessor},
 	rights = {Creative Commons Attribution-{ShareAlike} License},
 	url = {https://de.wikipedia.org/w/index.php?title=Pr%C3%A4prozessor&oldid=172727677},
@@ -189,7 +218,7 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	note = {Page Version {ID}: 172727677}
 }
 
-@online{SASS_REFERENCE,
+@online{sass-lang_file:_????,
 	title = {File: {SASS}\_REFERENCE — Documentation by {YARD} 0.9.12},
 	url = {https://sass-lang.com/documentation/file.SASS_REFERENCE.html},
 	shorttitle = {{SASS}\_REFERENCE},
@@ -207,62 +236,45 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	langid = {english}
 }
 
-@online{websocket_official,
+@online{w3c_websockets_????,
 	title = {Websockets Official},
 	url = {https://www.w3.org/TR/websockets/},
 	shorttitle = {websockets\_official},
 	author = {{W3C}}
 }
 
-@online{browser_support_variables,
-	title = {Browser Support von CSS-Variablen},
+@online{caniuse_browser_????,
+	title = {Browser Support von {CSS}-Variablen},
 	url = {https://caniuse.com/#search=custom%20properties},
 	shorttitle = {browser\_support\_variables},
-	author = {{CanIuse}},
-	urldate = {2018-03-20}
+	author = {{CanIuse}}
 }
 
-@online{websocket_events,
-	title = {Websocket Events und Actions},
-	url = {https://www.tutorialspoint.com/websockets/websockets_events_actions.htm},
-	shorttitle = {websocket\_events},
-	author = {{tutorialspoint}},
-	urldate = {2018-03-20}
-}
-
-@online{websocket_spec,
-	title = {Websocket Official Spec},
-	url = {https://html.spec.whatwg.org/multipage/web-sockets.html#network},
-	shorttitle = {websocket\_spec},
-	author = {{whatwg}},
-	urldate = {2018-03-20}
-}
-
-@online{css_official,
+@online{_css_????,
 	title = {{CSS} Snapshot 2017},
 	url = {https://www.w3.org/TR/CSS/},
 	urldate = {2018-04-02}
 }
 
-@online{html_official,
+@online{_html_????,
 	title = {{HTML} 5.2},
 	url = {https://www.w3.org/TR/html52/},
 	urldate = {2018-04-02}
 }
 
-@online{javascript_official,
+@online{_javascript_????,
 	title = {{JavaScript} {\textbar} {MDN}},
 	url = {https://developer.mozilla.org/en-US/docs/Web/javascript},
 	urldate = {2018-04-02}
 }
 
-@online{media_queries_official,
+@online{_media_????,
 	title = {Media Queries Level 4},
 	url = {https://www.w3.org/TR/mediaqueries-4/},
 	urldate = {2018-04-02}
 }
 
-@online{socket_io,
+@online{guillermo_rauch_socket.io_????,
 	title = {Socket.{IO} — Docs},
 	url = {https://socket.io/docs/},
 	shorttitle = {socket.io},
@@ -270,7 +282,7 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	urldate = {2018-04-03}
 }
 
-@online{soundcraft_official,
+@online{soundcraft_ui16_????,
 	title = {Ui16 {\textbar} Soundcraft - Professional Audio Mixers},
 	url = {https://www.soundcraft.com/products/ui16#specifications},
 	shorttitle = {soundcraft},
@@ -278,27 +290,27 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	urldate = {2018-04-03}
 }
 
-@online{curl_official,
+@online{php_manual_php:_????,
 	title = {{PHP}: Introduction - Manual},
 	url = {https://secure.php.net/manual/en/intro.curl.php},
 	shorttitle = {curl\_official},
-	author = {{pcurl manual}},
+	author = {{php manual}},
 	urldate = {2018-04-03}
 }
 
-@online{_frontend,
+@online{_definition_????,
 	title = {Definition Frontend Erklärung Frontend},
 	url = {http://www.softselect.de/business-software-glossar/frontend},
 	urldate = {2018-04-26}
 }
 
-@online{websocket_standard,
+@online{_html_????-1,
 	title = {{HTML} Standard},
 	url = {https://html.spec.whatwg.org/multipage/web-sockets.html#network},
 	urldate = {2018-04-26}
 }
 
-@online{reducing_hacks,
+@online{denney_reducing_2016,
 	title = {Reducing Layout Hacks With Flexbox},
 	url = {https://medium.com/code-school/reducing-layout-hacks-with-flexbox-6124b913235},
 	abstract = {Last week, Code School released our flexbox course, Cracking the Case With Flexbox, which explores the new properties in the spec and how…},
@@ -308,7 +320,7 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	date = {2016-10-19}
 }
 
-@online{relationship_grid_and_flex,
+@online{_relationship_????,
 	title = {Relationship of grid layout to other layout methods},
 	url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Grid_Layout/Relationship_of_Grid_Layout},
 	abstract = {{CSS} Grid Layout has been designed to work alongside other parts of {CSS}, as part of a complete system for doing the layout. In this guide, I will explain how a grid fits together with other techniques you may already be using.},
@@ -317,7 +329,7 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	langid = {american}
 }
 
-@online{angular_official_docs,
+@online{_angular_????,
 	title = {Angular - What is Angular?},
 	url = {https://angular.io/docs},
 	shorttitle = {Angular\_official},
