--- a/diplom.bib
+++ b/diplom.bib
@@ -764,7 +764,7 @@ Im Bereich des {CAD}-Entwurfs, des {CAM} sowie der Finite-Elemente-Simulation wi
 	urldate = {2018-04-03}
 }
 
-@online{_frontend,
+@online{frontend_def,
 	title = {Definition Frontend Erklärung Frontend},
 	url = {http://www.softselect.de/business-software-glossar/frontend},
 	urldate = {2018-04-26}
