--- a/__latexindent_temp.tex
+++ b/__latexindent_temp.tex
@@ -1,5 +1,1 @@
-\section{Herausforderungen}\label{Herausforderungen}
-
-\renewcommand{\kapitelautor}{Autor: Dominik Nußbaumer}
-
-    \input{markdown/Dominik.md/Herausforderungen.md}
+{Autor: Clemens Scharwitzl}
