--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -470,7 +470,6 @@ Wien, \today
 
 % \input{text/demo_fuelltext.tex}
 
-
 \appendix
 
 %\chapter{Anhang 1\label{chap:Anhang-1}}
@@ -487,6 +486,7 @@ Wien, \today
 %% Flattersatz -- damit werden die langen URLs besser umgebrochen
 \raggedright %% eventuell auskommentieren
 \bibliographystyle{alphaurl}%Alternative unsrtdin - Nummern im Text aufsteigend
+\renewcommand{\kapitelautor}{}
 \bibliography{diplom}
 
 
